fixed text align right problem

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -283,7 +283,7 @@ h1 span {
 }
 
 .pull-right{
-  margin-left: 70%;
+  float: right;
 }
 
 .header2-for-pages{
