--- a/public/stylesheets/queries.css
+++ b/public/stylesheets/queries.css
@@ -86,10 +86,6 @@
   .section-testimonials {
   background-attachment: inherit;
   }
-
-  .pull-right{
-    margin-left: 55%;
-  }
       
 }
 
@@ -182,10 +178,6 @@
   .sticky .main-nav li a:visited { padding: 10px 0; }
   .sticky .mobile-nav-icon { margin-top: 10px; }
   .sticky .mobile-nav-icon i { color: #555; }
-
-  .pull-right{
-    margin-left: 55%;
-  }
   
 }
 /* Small phones: from 0 to 480px */
